Scaffolds sterile protocol

--- a/research.html
+++ b/research.html
@@ -48,7 +48,7 @@
 		<h3>Graphene Scaffolds</h3>
 		<small>Posted on 3/17/2019</small>
 		<p>Tesing the biocompatability of graphene scaffolds with canine osteoblasts. longterm
-        results in 3D matrix for hard tissue culture. Run. 
+        results in 3D matrix for hard tissue culture. Followed sterile protocol.
         </p>
 		<a href="post.html">Read More</a>
 	</article>
